--- a/requirements.html
+++ b/requirements.html
@@ -16,6 +16,12 @@
     <h1>DIET-MATE</h1>
 </header>
 
+<nav>
+    <a href="customized_diet.html">Make Your Customized Diet Plan</a>
+    <a href="track_nutrition.html">Track Your Nutrition Goals</a>
+    <a href="fitness_details.html">Get Your Fitness Details</a>
+</nav>
+
 <main>
     <section class="calculator-section">
         <h2>Nutrition Calculator</h2>
