--- a/track_nutrition.html
+++ b/track_nutrition.html
@@ -20,6 +20,7 @@
         <a href="customized_diet.html">Make Your Customized Diet Plan</a>
         <a href="track_nutrition.html">Track Your Nutrition Goals</a>
         <a href="fitness_details.html">Get Your Fitness Details</a>
+        <a href="./Gamification/index.html">7 Day Diet Crash Plan</a>
     </nav>
 
     <main>
