--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="track_nutrition.html">Track Your Nutrition Goals</a>
       <a href="fitness_details.html">Get Your Fitness Details</a>
       <a href="./Gamification/index.html">7 Day Diet Crash Plan</a>
+      <a href="./FindMeal/findMeal.html">Find Meal by Ingredient</a>
       
     </nav>
 
