--- a/track_nutrition.html
+++ b/track_nutrition.html
@@ -21,6 +21,8 @@
         <a href="track_nutrition.html">Track Your Nutrition Goals</a>
         <a href="fitness_details.html">Get Your Fitness Details</a>
         <a href="./Gamification/index.html">7 Day Diet Crash Plan</a>
+        <a href="./FindMeal/findMeal.html">Find Meal by Ingredient</a>
+        <a href="./BrowseFoods/index.html">Browse Foods</a>
     </nav>
 
     <main>
