--- a/fitness_details.html
+++ b/fitness_details.html
@@ -7,24 +7,32 @@
     <title>Diet Mate - Fitness Details</title>
 </head>
 <body>
-
+    <header>
+        <div class="logo-container">
+          <img src="dietmate logo final.png" alt="DIETMATE Logo" class="logo" />
+        </div>
+        <h1 class="dietmate-title">DIETMATE</h1>
+      </header>
     <!-- Home option -->
 <div class="home-link">
     <a href="index.html">Home</a>
 </div>
 
-<header>
+<!-- <header>
     <div class="logo-container">
         <img src="images/dietmate.jpeg" alt="DIETMATE Logo" class="logo">
         <span class="mate-text">MATE</span>
     </div>
     <h1>DIET-MATE</h1>
-</header>
+</header> -->
 
 <nav>
     <a href="customized_diet.html">Make Your Customized Diet Plan</a>
     <a href="track_nutrition.html">Track Your Nutrition Goals</a>
     <a href="fitness_details.html">Get Your Fitness Details</a>
+    <a href="./Gamification/index.html">7 Day Diet Crash Plan</a>
+    <a href="./FindMeal/findMeal.html">Find Meal by Ingredient</a>
+    <a href="./BrowseFoods/index.html">Browse Foods</a>
 </nav>
 
 <main>
