--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="fitness_details.html">Get Your Fitness Details</a>
       <a href="./Gamification/index.html">7 Day Diet Crash Plan</a>
       <a href="./FindMeal/findMeal.html">Find Meal by Ingredient</a>
-      <a href="./BrowseFoods/index.html">Browse Foods</a>
+      <a href="browsefoods.html">Browse Meals</a>
       
     </nav>
 
