--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
     <title>DIETMATE</title>
     <!-- Link your CSS file here -->
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;800&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Jockey One:wght@400&display=swap"
+    />
   </head>
   <body>
-    <header>
+    <nav>
       <div class="logo-container">
         <img src="dietmate logo final.png" alt="DIETMATE Logo" class="logo" />
       </div>
-      <h1 class="dietmate-title">DIETMATE</h1>
-    </header>
-
-    <nav>
       <a href="customized_diet.html">Make Your Customized Diet Plan</a>
       <a href="track_nutrition.html">Track Your Nutrition Goals</a>
       <a href="fitness_details.html">Get Your Fitness Details</a>
       <a href="./Gamification/index.html">7 Day Diet Crash Plan</a>
       <a href="./FindMeal/findMeal.html">Find Meal by Ingredient</a>
       <a href="browsefoods.html">Browse Meals</a>
-      
     </nav>
 
     <section class="hero-section">
@@ -30,7 +37,7 @@
         <h2>Take Control of Your Health</h2>
         <p>With Our Tailored Diet Plans</p>
         <a href="customized_diet.html"
-          ><button id="createNowButton">Create Now</button></a
+          ><button id="createNowButton">Create Now !</button></a
         >
       </div>
       <div class="hero-image">
