faqs and bg changed

--- a/index.html
+++ b/index.html
@@ -76,6 +76,27 @@
     <section class="faq-section">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-item">
+        <button class="question-btn" onclick="toggleAnswer('answer2')">
+          What is DietMate?
+        </button>
+        <div class="answer" id="answer2">
+          DietMate is a personalized dietary planning web application designed
+          to help individuals make informed food choices based on their unique
+          health needs and goals.
+        </div>
+      </div>
+      <div class="faq-item">
+        <button class="question-btn" onclick="toggleAnswer('answer3')">
+          How does DietMate work?
+        </button>
+        <div class="answer" id="answer3">
+          DietMate utilizes advanced AI technology to analyze user data,
+          including health metrics, dietary preferences, and lifestyle factors.
+          Based on this information, it generates personalized diet plans
+          tailored to each user's specific nutritional requirements.
+        </div>
+      </div>
+      <div class="faq-item">
         <button class="question-btn" onclick="toggleAnswer('answer1')">
           Why is it important to recommend specific diets for people with
           multiple health conditions?
@@ -103,10 +124,23 @@
         </div>
       </div>
       <div class="faq-item">
-        <button class="question-btn" onclick="toggleAnswer('answer2')">
+        <button class="question-btn" onclick="toggleAnswer('answer4')">
           What are some misconceptions about obesity?
         </button>
-        <div class="answer" id="answer2">
+        <div class="answer" id="answer4">
+          Some misconceptions about obesity include the belief that it is solely
+          a result of poor willpower or laziness, when in fact it is a complex
+          condition influenced by a variety of factors such as genetics,
+          environment, behaviour, and physiology. Additionally, weight is not
+          always a reliable indicator of health, and individuals of all sizes
+          deserve to be treated with respect and compassion.
+        </div>
+      </div>
+      <div class="faq-item">
+        <button class="question-btn" onclick="toggleAnswer('answer5')">
+          What are some misconceptions about obesity?
+        </button>
+        <div class="answer" id="answer5">
           Some misconceptions about obesity include the belief that it is solely
           a result of poor willpower or laziness, when in fact it is a complex
           condition influenced by a variety of factors such as genetics,
