--- a/index.html
+++ b/index.html
@@ -138,22 +138,63 @@
       </div>
       <div class="faq-item">
         <button class="question-btn" onclick="toggleAnswer('answer5')">
-          What are some misconceptions about obesity?
+          Is DietMate user-friendly?
         </button>
         <div class="answer" id="answer5">
-          Some misconceptions about obesity include the belief that it is solely
-          a result of poor willpower or laziness, when in fact it is a complex
-          condition influenced by a variety of factors such as genetics,
-          environment, behaviour, and physiology. Additionally, weight is not
-          always a reliable indicator of health, and individuals of all sizes
-          deserve to be treated with respect and compassion.
+          Yes, DietMate features a user-friendly interface that makes it easy
+          for users to input their information and navigate through the
+          platform. The process of generating personalized diet plans is
+          intuitive and straightforward.
         </div>
       </div>
       <!-- Add more FAQ items as needed -->
     </section>
 
-    <footer>
+    <!--<<footer>
+
       <p>&copy; 2024 DIETMATE. All rights reserved.</p>
+    </footer>>-->
+    <footer class="footer">
+      <div class="footer-left">
+        <img
+          src="dietmate logo final.png"
+          alt="Diet Mate Logo"
+          class="footer-logo"
+        />
+        <div class="social-icons">
+          <a href="#" class="social-icon-link"><img src="linkedin.svg" alt="LinkedIn"></a>
+          <a href="#" class="social-icon-link"><img src="insta.svg" alt="Instagram"></a>
+          <a href="#" class="social-icon-link"><img src="twitter.svg" alt="Twitter"></a>
+        </div>
+      </div>
+      <div class="footer-right">
+        <div class="footer-links">
+          <a href="customized_diet.html" class="footer-link"
+            >Create Diet Plan</a
+          >
+          <a href="fitness_details.html" class="footer-link"
+            >Get Your Fitness Details</a
+          >
+          
+          <a href="terms_of_service.html" class="footer-link"
+            >Terms of Service</a
+          >
+          <a href="privacy_policy.html" class="footer-link">Privacy Policy</a>
+        </div>
+      <div class="footer-left">
+        <div class="footer-links">
+          <a href="about_us.html" class="footer-link">About Us</a>
+          <a href="terms_of_service.html" class="footer-link"
+            >Terms of Service</a
+          >
+          <a href="privacy_policy.html" class="footer-link">Privacy Policy</a>
+        </div>
+        <div class="footer-contact">
+          <a href="mailto:support@dietmate.bu.in" class="contact-link"
+            >support@dietmate.bu.in</a
+          >
+        </div>
+      </div>
     </footer>
 
     <!-- Link your JavaScript file here -->
